# azure-costs-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  knowledge_drift.yml  new_rule.yml
.github/workflows/: test.yml
docs/: architecture.md  contributing-a-rule.md  example-report.md
scripts/: install_skill.sh  refresh_knowledge.py
